[package]
name = "fairos"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "1.0"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros"] }
