[package]
name = "fairos"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["giraffekey <giraffekey@tutanota.com>"]

[dependencies]
base64 = "0.13"
bip39 = "1.0"
bytes = "1.1"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
log = "0.4"
mime = "0.3"
multipart = { version = "0.18", features = ["client", "hyper"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
